Add borrow API
